# Spiktor

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  STANDALONE.md  bootstrap.sh  capacitor.config.ts  docker-compose.yml  push.sh  sync-repos.sh
agents/crewai-flows/: Dockerfile  pyproject.toml  server.py
agents/crewai-flows/src/spiktor_flow/: main.py
agents/crewai-flows/src/spiktor_flow/crews/coder_crew/: coder_crew.py
agents/crewai-flows/src/spiktor_flow/crews/coder_crew/config/: agents.yaml  tasks.yaml
agents/crewai-flows/src/spiktor_flow/crews/critic_crew/: critic_crew.py
agents/crewai-flows/src/spiktor_flow/crews/critic_crew/config/: agents.yaml  tasks.yaml
agents/crewai-flows/src/spiktor_flow/crews/judge_crew/: judge_crew.py
agents/crewai-flows/src/spiktor_flow/crews/judge_crew/config/: agents.yaml  tasks.yaml
agents/crewai-flows/src/spiktor_flow/crews/ops_crew/: ops_crew.py
agents/crewai-flows/src/spiktor_flow/crews/ops_crew/config/: agents.yaml  tasks.yaml
agents/crewai-flows/src/spiktor_flow/crews/planner_crew/: planner_crew.py
agents/crewai-flows/src/spiktor_flow/crews/planner_crew/config/: agents.yaml  tasks.yaml
agents/crewai-flows/src/spiktor_flow/tools/: __init__.py  github_mcp_tool.py  mythos_swd_tool.py  subconscious_tool.py
aios-kernel/: kernel.config.yml  litellm_config.yml  tool-registry.yml
android/: SPEC.md  build.sh  setup-and-build.sh
camera/: Dockerfile  requirements.txt  service.py
docs/: AGENTIC_OS.md  CLAUDE_CAPABILITIES.md  NEUROGENETIC_BRAIN.md  SUBCONSCIOUS.md
integrations/: hub.ts
(+88 files in other folders)
