[project]
name = "spiktor-flow"
version = "1.0.0"
description = "Spiktor's Planner->Coder->Critic->Judge->Ops pipeline as a CrewAI Flow"
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "requests>=2.32.0",
    "pydantic>=2.9.0",
]

[project.scripts]
spiktor_flow = "spiktor_flow.main:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spiktor_flow"]
